--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "format": "prettier --write src"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.6.2",
     "typed-scss-modules": "^8.1.1"
   },
