--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint src --fix",
     "preview": "vite preview",
-    "format": "prettier --write src"
+    "format": "prettier --config prettierrc.yml --write \"src/**/*.{ts,tsx,js,jsx}\""
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react-swc": "^3.10.2",
