--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@tanstack/react-table": "^8.21.3",
     "clsx": "^2.1.1",
+    "effector": "^23.4.1",
+    "effector-react": "^23.3.0",
     "lucide-react": "^0.525.0",
+    "motion": "^12.23.5",
+    "motion-v": "^1.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
