--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "effector": "^23.4.1",
     "effector-react": "^23.3.0",
     "lucide-react": "^0.525.0",
+    "maplibre-gl": "^5.6.1",
     "motion": "^12.23.5",
     "motion-v": "^1.5.0",
     "react": "^19.1.0",
@@ -26,6 +27,7 @@
     "react-loading-skeleton": "^3.5.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.6.2",
+    "root": "github:lhapaipai/maplibre-react-components",
     "typed-scss-modules": "^8.1.1",
     "zod": "^4.0.5"
   },
