--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@tanstack/react-table": "^8.21.3",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.0",
     "effector": "^23.4.1",
     "effector-react": "^23.3.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
     "maplibre-gl": "^5.6.1",
     "motion": "^12.23.5",
