--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@tanstack/react-table": "^8.21.3",
     "clsx": "^2.1.1",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.0",
     "effector": "^23.4.1",
     "effector-react": "^23.3.0",
