--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.2.0",
     "prettier": "^3.6.0",
+    "rollup-plugin-visualizer": "^6.0.3",
     "sass-embedded": "^1.89.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.34.1",
