zod 3.22 and delete other locales plus zodI18nMap

--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
     "@as-integrations/express5": "^1.1.2",
     "@hookform/resolvers": "^5.1.1",
     "@reduxjs/toolkit": "^2.8.2",
-    "@stagewise-plugins/react": "^0.6.1",
-    "@stagewise/toolbar-react": "^0.6.1",
     "@tanstack/react-query": "^5.83.0",
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.10.0",
@@ -28,6 +26,7 @@
     "effector": "^23.4.1",
     "effector-react": "^23.3.0",
     "graphql": "^16.11.0",
+    "i18next": "^25.3.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
     "maplibre-gl": "^5.6.1",
@@ -41,7 +40,8 @@
     "react-router": "^7.6.2",
     "root": "github:lhapaipai/maplibre-react-components",
     "typed-scss-modules": "^8.1.1",
-    "zod": "^4.0.5"
+    "zod": "^3.22.2",
+    "zod-i18n-map": "^2.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
