--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint src --fix",
     "preview": "vite preview",
-    "format": "prettier --config prettierrc.yml --write \"src/**/*.{ts,tsx,js,jsx}\""
+    "format": "prettier --config prettierrc.yml --write \"src/**/*.{ts,tsx,js,jsx}\"",
+    "test": "jest"
   },
   "dependencies": {
     "@apollo/client": "^3.13.8",
@@ -45,18 +46,29 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.1.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/text-encoding": "^0.0.40",
     "@vitejs/plugin-react-swc": "^3.10.2",
     "eslint": "^9.29.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.2.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^30.0.5",
+    "jest-environment-jsdom": "^30.0.5",
     "prettier": "^3.6.0",
     "rollup-plugin-visualizer": "^6.0.3",
     "sass-embedded": "^1.89.2",
+    "text-encoding": "^0.7.0",
+    "ts-jest": "^29.4.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.34.1",
     "vite": "^7.0.0"
