--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -14,6 +14,8 @@
     "moduleDetection": "force",
     "noEmit": true,
     "jsx": "react-jsx",
+    "esModuleInterop": true,
+    "types": ["jest", "@testing-library/jest-dom"],
 
     /* Linting */
     "strict": true,
@@ -32,5 +34,5 @@
       "widgets/*": ["./src/widgets/*"]
     }
   },
-  "include": ["src"]
+  "include": ["src", "jest.config.js"]
 }
